nav now prevents scroll on mobile, added proj init pages, social links on contact

--- a/css/style.css
+++ b/css/style.css
@@ -765,7 +765,7 @@ h6 {
   }
 
   .message {
-    height: 9rem !important;
+    height: 7rem !important;
   }
 
   .case {
